# machine-learning-app

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
base_site/: asgi.py  urls.py  views.py  wsgi.py
base_site/settings/: base.py
blog/: models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
ml_web/: asgi.py  urls.py  views.py  wsgi.py
ml_web/settings/: base.py
mysite/: db.sqlite3  urls.py
mysite/blog/: views.py
mysite/blog/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
mysite/mysite/settings/: __init__.py  base.py  settings.py
mysite/natural_language_processing/: apps.py  models.py  preprocess.py  serializers.py  urls.py  views.py
mysite/natural_language_processing/migrations/: 0001_initial.py
mysite/settings/: __init__.py  base.py
natural_language_processing/: admin.py  form.py  models.py  preprocess.py  serializers.py  urls.py  views.py
natural_language_processing/migrations/: 0001_initial.py
natural_language_processing/nlp_model/: tokenizer.pickle
public/static/css/: style.css
static/: staticfiles.json
staticfiles/: staticfiles.json
staticfiles/css/: style.css
templates/: about.html  base.html  home.html  index.html  messages.html  nlp__review_form.html  nlp__review_list.html  nlp_form.html  review_list.html
templates/nlp/: review_form.html  sentiment_analysis.html
tests/: test_web_app.py
