[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["yosep34 <yosepalexsander9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
pandas = "^1.1.3"
numpy = "^1.19.2"
djangorestframework = "^3.12.1"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
